[UPD][FIX] Done memberCard js + Fixed card style

--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
       </div>
     </div>
     <!-- Cards Row -->
-    <div class="row" id="team-members">
+    <div class="row my-5 g-4" id="team-members">
       <!-- card -->
-      <div class="col-12 col-md-6 col-lg-4 justify-content-start">
-        <div class="row">
-          <div class="col-4 ps-0" id="card-img">
-            <img src="./img/male1.png" alt="" class="img-fluid w-100 h-100">
-          </div>
-          <div class="col-8 d-flex flex-column justify-content-center" id="card-text">
+      <!-- <div class="col-12 col-md-6 col-lg-4">
+        <div class="d-flex">
+          <img src="./img/male1.png" alt="" class="img-fluid">
+
+          <div class="d-flex flex-column justify-content-center" id="card-text">
             <h4>Marco Bianchi</h4>
             <p>Designer</p>
             <a href="">marcobianchi@gmail.com</a>
           </div>
         </div>
-      </div>
+      </div> -->
+      
     </div>
 
   </div>
