[UPD] Done form style

--- a/index.html
+++ b/index.html
@@ -26,22 +26,39 @@
       </div>
     </div>
     <!-- Cards Row -->
-    <div class="row my-5 g-4" id="team-members">
-      <!-- card -->
-      <!-- <div class="col-12 col-md-6 col-lg-4">
-        <div class="d-flex">
-          <img src="./img/male1.png" alt="" class="img-fluid">
-
-          <div class="d-flex flex-column justify-content-center" id="card-text">
-            <h4>Marco Bianchi</h4>
-            <p>Designer</p>
-            <a href="">marcobianchi@gmail.com</a>
+    <div class="row my-5 g-4" id="team-members"></div>
+    <!-- Form -->
+    <div class="row my-5">
+      <div class="col-12">
+        <div class="form-container text-center">
+          <div class="form-title">
+            <h3>Entra nel Team!</h3>
           </div>
+          <form action="" id="member-form">
+            <div>
+              <label for="" class="form-control-label">Nome</label>
+              <input type="text" name="" id="name" placeholder="Inserisci il nome" class="form-control">
+            </div>
+            <div>
+              <label for="" class="form-control-label">Ruolo</label>
+              <input type="text" name="" id="role" placeholder="Inserisci il ruolo" class="form-control">
+            </div>
+            <div>
+              <label for="" class="form-control-label">Email</label>
+              <input type="text" name="" id="email" placeholder="Inserisci un'email" class="form-control">
+            </div>
+            <div>
+              <label for="" class="form-control-label">Immagine</label>
+              <input type="text" name="" id="image" placeholder="Inserisci un'immagine" class="form-control">
+            </div>
+            <div>
+              <button id="send" class="my-button">Inserisci</button>
+            </div>
+          </form>
         </div>
-      </div> -->
-      
+        
+      </div>
     </div>
-
   </div>
 
   <script src="./js/script.js"></script>
