[UPD] Done new card from form

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <div>
               <label for="" class="form-control-label">Immagine</label>
-              <input type="text" name="" id="image" placeholder="Inserisci un'immagine" class="form-control">
+              <input type="text" name="" id="img" placeholder="Inserisci un'immagine" class="form-control">
             </div>
             <div>
               <button id="send" class="my-button">Inserisci</button>
