[FIX] Fixed blank attributes and comment

--- a/index.html
+++ b/index.html
@@ -34,29 +34,28 @@
           <div class="form-title">
             <h3>Entra nel Team!</h3>
           </div>
-          <form action="" id="member-form">
+          <form action="#" id="member-form">
             <div>
-              <label for="" class="form-control-label">Nome</label>
-              <input type="text" name="" id="name" placeholder="Inserisci il nome" class="form-control">
+              <label for="name" class="form-control-label">Nome</label>
+              <input type="text" name="name" id="name" placeholder="Inserisci il nome" class="form-control">
             </div>
             <div>
-              <label for="" class="form-control-label">Ruolo</label>
-              <input type="text" name="" id="role" placeholder="Inserisci il ruolo" class="form-control">
+              <label for="role" class="form-control-label">Ruolo</label>
+              <input type="text" name="role" id="role" placeholder="Inserisci il ruolo" class="form-control">
             </div>
             <div>
-              <label for="" class="form-control-label">Email</label>
-              <input type="text" name="" id="email" placeholder="Inserisci un'email" class="form-control">
+              <label for="email" class="form-control-label">Email</label>
+              <input type="text" name="email" id="email" placeholder="Inserisci un'email" class="form-control">
             </div>
             <div>
-              <label for="" class="form-control-label">Immagine</label>
-              <input type="text" name="" id="img" placeholder="Inserisci un'immagine" class="form-control">
+              <label for="img" class="form-control-label">Immagine</label>
+              <input type="text" name="img" id="img" placeholder="Inserisci un'immagine" class="form-control">
             </div>
             <div>
               <button id="send" class="my-button">Inserisci</button>
             </div>
           </form>
         </div>
-        
       </div>
     </div>
   </div>
